syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.cgi.eoss.ftep.wps";
option java_outer_classname = "WpsServices";

service ApplicationLauncher {
    rpc LaunchApplication (ApplicationParams) returns (ApplicationResponse) {
    }
}

message ApplicationParams {
    string jobId = 1;
    string userId = 2;
    string serviceId = 3;
    string appName = 4;
    string input = 5;
    string output = 6;
    int32 timeout = 7;
}

message ApplicationResponse {
    string outputUrl = 1;
}
